[package]
name = "algo_and_struct"
version = "0.1.0"
authors = ["deepgreenAN <asami73dgreen63@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "0.3.2"
itertools = "0.10.1"
once_cell = "1.15.0"
